2000-05-25    <Kalle Marjola <rpr@wapit.com>>

	* gw/*box.c: changed default configuration file to be
	kannel.conf. Please note that there is NO such file, but two
	sample files, smskannel.conf and wapkannel.conf

2000-05-24    <Kalle Marjola <rpr@wapit.com>>

	* doc/userguide/userguide.xml: Removed old configuration file
	things, read the newconf.txt file. Did same to HTTP adminstration
	notes, read file newbb.txt

	* doc/arch/arch-bearerbox.xml: Rewrote to reflect the new
	bearerbox. Have to do it a bit more deeply someday, however. And
	pictures, too.

	* gw/wsp.c: Applied a short WSP header patch by Joerg Pommnitz to
	handle broken headers from Timeport

	* test/simple.smsconf: removed

2000-05-24  Richard Braakman  <dark@wapit.com>

	* gw/wsp_http.c: Fixed Accept header scanning in wsp_http_thread.

2000-05-24    <Kalle Marjola <rpr@wapit.com>>

	* doc/userguide/newconf.txt: added documentation about new
	configuration file

	* doc/userguide/newbb.txt: added documentation about new
	bearerbox

	* gw/bearerbox.c: moved new bearerbox into final name, old
	bearerbox removed from the project

	* gw/smskannel.conf, gw/wapkannel.conf: added new sample
	configurations

	* gw/kannel.*conf: removed old configuration defination files

	* test/sample.*conf: removed old sample configurations

	* gw/smsbox.c, gw/urltrans.c, gw/wapbox.c: edited to use new 
	configuration file

	* README: updated

2000-05-24  Richard Braakman  <dark@wapit.com>

	* test/test_cimd2.c: Written a while ago, added to CVS today.
	Might be useful for people doing speed tests of sms handling.
	
2000-05-23    <Kalle Marjola <rpr@wapit.com>>

	* gwlib/http2.c|h: moved destroying functions here, and changed so
	that http2_socket_host does not duplicate the octstr but returns
	reference

	* gw/bb_http.c: check for password of the admin

	* gw/smsbox*.c moved cgi and destroy functions to http2
	
2000-05-23    <Kalle Marjola <rpr@wapit.com>>

	* gw/bb_http.c: check for allow/deny IP for http admin
	