@@ -26,6 +26,7 @@ box-deny-ip = "*.*.*.*"
 box-allow-ip = "127.0.0.1"
 #admin-deny-ip = ""
 #admin-allow-ip = ""
+unified-prefix = "00358,0"
 
 group = smsc
 smsc = fake
